Salesforce/main/default/main/default/objects/Configuracion_BMX__c/fields/CRM_Safra_Actual__c.field-meta.xml
<CustomField>
    <fullName>CRM_Safra_Actual__c</fullName>
    <description>Indica la campaña actual con la que está trabajando CRM</description>
    <label>CRM_Safra_Actual</label>
    <length>5</length>
    <type>Text</type>
</CustomField>