Salesforce/main/default/main/default/objects/Configuracion_BMX__c/fields/Data_Final_CRM__c.field-meta.xml
<CustomField>
    <fullName>Data_Final_CRM__c</fullName>
    <label>Data Final CRM</label>
    <length>5</length>
    <type>Text</type>
</CustomField>