Salesforce/main/default/main/default/objects/Configuracion_BMX__c/fields/Data_Final_Estimativa_Soja__c.field-meta.xml
<CustomField>
    <fullName>Data_Final_Estimativa_Soja__c</fullName>
    <label>Data Final Estimativa Soja</label>
    <length>5</length>
    <type>Text</type>
</CustomField>