Salesforce/main/default/main/default/objects/Configuracion_BMX__c/fields/Data_Inicial_CRM__c.field-meta.xml
<CustomField>
    <fullName>Data_Inicial_CRM__c</fullName>
    <label>Data Inicial CRM</label>
    <length>5</length>
    <type>Text</type>
</CustomField>