Salesforce/main/default/main/default/objects/Configuracion_BMX__c/fields/FC_Mandante_SAP__c.field-meta.xml
<CustomField>
    <fullName>FC_Mandante_SAP__c</fullName>
    <label>FC Mandante SAP</label>
    <length>5</length>
    <type>Text</type>
</CustomField>