Salesforce/main/default/main/default/objects/Configuracion_BMX__c/fields/Fire_triggers__c.field-meta.xml
<CustomField>
    <fullName>Fire_triggers__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Fire triggers</label>
    <type>Checkbox</type>
</CustomField>