Salesforce/main/default/main/default/objects/Configuracion_BMX__c/fields/Incidencia_Mult_para_Votar__c.field-meta.xml
<CustomField>
    <fullName>Incidencia_Mult_para_Votar__c</fullName>
    <label>% de Incidencia Mult para Votar</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>