Salesforce/main/default/main/default/objects/Configuracion_BMX__c/fields/link_intra_dm__c.field-meta.xml
<CustomField>
    <fullName>link_intra_dm__c</fullName>
    <description>Direccion para el link de SF a SAP
 (TELEFONICA: 200.41.230.166:8000; IPNEXT: 190.7.230.68:8000)</description>
    <inlineHelpText>Direccion para el link de SF a SAP
 (TELEFONICA: 200.41.230.166:8000; IPNEXT: 190.7.230.68:8000)</inlineHelpText>
    <label>Link Sap Des</label>
    <length>200</length>
    <type>Text</type>
</CustomField>