Salesforce/main/default/main/default/objects/Configuracion_BMX__c/fields/Link_Sap_Prod__c.field-meta.xml
<CustomField>
    <fullName>Link_Sap_Prod__c</fullName>
    <label>Link Sap Prod</label>
    <length>200</length>
    <type>Text</type>
</CustomField>