Salesforce/main/default/main/default/objects/Configuracion_BMX__c/fields/Link_Sap_QA__c.field-meta.xml
<CustomField>
    <fullName>Link_Sap_QA__c</fullName>
    <label>Link Sap QA</label>
    <length>100</length>
    <type>Text</type>
</CustomField>