Salesforce/main/default/main/default/objects/Configuracion_BMX__c/fields/Londrina_Tasa_COFINS__c.field-meta.xml
<CustomField>
    <fullName>Londrina_Tasa_COFINS__c</fullName>
    <label>Londrina Tasa COFINS</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>