Salesforce/main/default/main/default/objects/Configuracion_BMX__c/fields/Marca__c.field-meta.xml
<CustomField>
    <fullName>Marca__c</fullName>
    <label>Marca</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BRMX</fullName>
                <default>true</default>
                <label>BRMX</label>
            </value>
            <value>
                <fullName>DSEM</fullName>
            </value>
            <value>
                <fullName>NEOG</fullName>
            </value>
            <value>
                <fullName>DAGMA</fullName>
            </value>
            <value>
                <fullName>LICENÇAS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>