Salesforce/main/default/main/default/objects/Configuracion_BMX__c/fields/Mes_Stock__c.field-meta.xml
<CustomField>
    <fullName>Mes_Stock__c</fullName>
    <label>Mes Stock</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Janeiro</fullName>
            </value>
            <value>
                <fullName>Fevereiro</fullName>
            </value>
            <value>
                <fullName>Março</fullName>
            </value>
            <value>
                <fullName>Abril</fullName>
            </value>
            <value>
                <fullName>Maio</fullName>
            </value>
            <value>
                <fullName>Junho</fullName>
            </value>
            <value>
                <fullName>Julho</fullName>
            </value>
            <value>
                <fullName>Agosto</fullName>
            </value>
            <value>
                <fullName>Setembro</fullName>
            </value>
            <value>
                <fullName>Outubro</fullName>
            </value>
            <value>
                <fullName>Novembro</fullName>
            </value>
            <value>
                <fullName>Dezembro</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>