Salesforce/main/default/main/default/objects/Configuracion_BMX__c/fields/Passo_Fundo_Tasa_PIS__c.field-meta.xml
<CustomField>
    <fullName>Passo_Fundo_Tasa_PIS__c</fullName>
    <label>Passo Fundo Tasa PIS</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>