Salesforce/main/default/main/default/objects/Configuracion_BMX__c/fields/PM_Email_Sender__c.field-meta.xml
<CustomField>
    <fullName>PM_Email_Sender__c</fullName>
    <label>PM Email Sender</label>
    <length>18</length>
    <type>Text</type>
</CustomField>