Salesforce/main/default/main/default/objects/Configuracion_BMX__c/fields/PM_Safra_Actual_Estoque__c.field-meta.xml
<CustomField>
    <fullName>PM_Safra_Actual_Estoque__c</fullName>
    <label>PM Safra Actual Estoque</label>
    <length>5</length>
    <type>Text</type>
</CustomField>