Salesforce/main/default/main/default/objects/Configuracion_BMX__c/fields/PM_Safra_Actual_Eventos__c.field-meta.xml
<CustomField>
    <fullName>PM_Safra_Actual_Eventos__c</fullName>
    <label>PM Safra Actual Eventos</label>
    <length>5</length>
    <type>Text</type>
</CustomField>