Salesforce/main/default/main/default/objects/Configuracion_BMX__c/fields/PM_Safra_Actual_VB_Estimativa_de_Compra__c.field-meta.xml
<CustomField>
    <fullName>PM_Safra_Actual_VB_Estimativa_de_Compra__c</fullName>
    <label>PM Safra Actual VB-Estimativa de Compra</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Safra</valueSetName>
    </valueSet>
</CustomField>