Salesforce/main/default/main/default/objects/Configuracion_BMX__c/fields/PV_Safra_Actual__c.field-meta.xml
<CustomField>
    <fullName>PV_Safra_Actual__c</fullName>
    <description>Campo para indicar la Safra Actual en el Portal de Votación</description>
    <label>PV Safra Actual</label>
    <length>5</length>
    <type>Text</type>
</CustomField>