Salesforce/main/default/main/default/objects/Configuracion_BMX__c/fields/Safra_Stock__c.field-meta.xml
<CustomField>
    <fullName>Safra_Stock__c</fullName>
    <description>Este campo es el que utiliza la clase Sched para generar la carga de los Objetos Analisis de Datos</description>
    <label>Safra Stock</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>12/13</fullName>
            </value>
            <value>
                <fullName>13/14</fullName>
            </value>
            <value>
                <fullName>14/15</fullName>
            </value>
            <value>
                <fullName>15/16</fullName>
            </value>
            <value>
                <fullName>16/17</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>