Salesforce/main/default/main/default/objects/Configuracion_BMX__c/fields/Votaci_n_fecha_hasta__c.field-meta.xml
<CustomField>
    <fullName>Votaci_n_fecha_hasta__c</fullName>
    <description>Fecha de cierre de la votación(según la vuelta, en Votacion Nro de Vuelta</description>
    <inlineHelpText>Fecha de cierre de la votación(según la vuelta, en Votacion Nro de Vuelta</inlineHelpText>
    <label>Votación Sul fecha hasta</label>
    <type>Date</type>
</CustomField>