Salesforce/main/default/main/default/objects/Configuracion_BMX__c/fields/Votacion_Cerrado_fecha_hasta__c.field-meta.xml
<CustomField>
    <fullName>Votacion_Cerrado_fecha_hasta__c</fullName>
    <label>Votación Cerrado fecha hasta</label>
    <type>Date</type>
</CustomField>