Salesforce/main/default/main/default/objects/Configuracion_BMX__c/fields/Votacion_nro_de_vuelta__c.field-meta.xml
<CustomField>
    <fullName>Votacion_nro_de_vuelta__c</fullName>
    <description>Para la aplicación de votación</description>
    <inlineHelpText>Para a segunda rodada, as variedades, valores e região devem ser carregados no objeto &quot;Votaçao Balotagem&quot;.</inlineHelpText>
    <label>Votacion Sul Nro de vuelta</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>